--- a/test_platform/test_platform/utils/fastdfs/client.conf
+++ b/test_platform/test_platform/utils/fastdfs/client.conf
@@ -11,7 +11,8 @@ base_path=E:\python\test_platform\test_platform\logs
 
 # tracker_server can ocur more than once, and tracker_server format is
 #  "host:port", host can be hostname or ip address
-tracker_server=192.168.95.129:22122
+# tracker_server=192.168.95.129:22122
+tracker_server=192.168.95.130:22122
 
 #standard log level as syslog, case insensitive, value list:
 ### emerg for emergency
